Enhance app configuration and database setup; improve session management and add health check endpoint

--- a/creds.env.example
+++ b/creds.env.example
@@ -1,4 +1,21 @@
-PROJECT_UUID = 'Your project uuid' # Enter your project uuid provided by brownieGate.
-API_KEY = 'Your API key' # Enter your API key provided by brownieGate.
-ENCRYPTION_KEY = 'Your encryption key' # Enter your encryption key provided by brownieGate.
-FLASK_SECRET_KEY = 'Your flask key' # Enter your flask secret here.
+# BrownieGate example credentials (local development only).
+# Copy this file to creds.env and fill with the real values for your local environment.
+# Do NOT commit creds.env (this file is a template only).
+
+# The project UUID assigned to your project in BrownieGate
+PROJECT_UUID=your-project-uuid-here
+
+# API key for your project (the client uses this to call BrownieGate APIs)
+API_KEY=your-api-key-here
+
+# Fernet encryption key (32 url-safe base64-encoded bytes).
+ENCRYPTION_KEY=your-fernet-key-here
+
+# Flask secret key (used for signing session cookies). Provide a long random value:
+#   python -c "import secrets; print(secrets.token_hex(32))"
+FLASK_SECRET_KEY=your-flask-secret-here
+
+# Local dev cookie/session flags (0 or 1). Set COOKIE_SECURE=1 when running over HTTPS.
+COOKIE_SECURE=0
+COOKIE_SAMESITE=Lax
+SESSION_COOKIE_SECURE=0
